# sda-chaos-llm-lab

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
configs/: README.md  example_config.yaml
data/: README.md
docs/: Agents.md  Architecture.md
docs/agents/: README.md
experiments/: README.md
experiments/scripts/: README.md
losses/: __init__.py
models/: __init__.py
notebooks/: README.md
outer_loop/: __init__.py
regime/: __init__.py
utils/: __init__.py
