[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sda-chaos-llm-lab"
version = "0.1.0"
description = "Sequential Decision Analytics + Chaos/Regime Control for LLM Training"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "See LICENSE file"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "sequential-decision-analytics", "chaos-theory", "regime-control", "uncertainty-aware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "losses*", "regime*", "outer_loop*", "utils*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

